[project]
name = "emergency-openenv"
version = "0.1.0"
description = "Emergency situation OpenEnv environment"
authors = [
    { name = "Mayank, Pradhyuman" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"